@@ -1,3 +1,8 @@
+2006-11-24  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* unix/tkUnixMenu.c (DrawMenuUnderline): bound Tcl_UtfAtIndex usage
+	* tests/menu.test (menu-36.1): [Bug 1599877]
+
 2006-11-24  Joe English  <jenglish@users.sourceforge.net>
 
 	* library/ttk/altTheme.tcl, library/ttk/clamTheme.tcl, 
